--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.1",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.10.3",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.12.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
